finished setting up transfer service. Need to test.